# django-tenant

./: .gitignore  README.md  pyproject.toml
src/clients/: admin.py  apps.py  models.py
src/clients/migrations/: 0001_initial.py  0002_initial.py
src/orders/: admin.py  apps.py  models.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py
src/orders/templates/orders/: order_list.html
src/tenants/: settings.py  urls.py
src/users/: admin.py  apps.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/registration/: login.html
